# job-board

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
app/: config.py  database.py  dependencies.py  enums.py  main.py  models.py  schemas.py
app/controllers/: applications.py  jobs.py
app/routers/: applications.py  jobs.py
app/services/: scoring.py
tests/: conftest.py  test_api.py
